# yaak

src-tauri/: Cargo.toml
src-tauri/yaak-grpc/: Cargo.toml
src-tauri/yaak-grpc/src/: client.rs  manager.rs  transport.rs
src-tauri/yaak-http/: Cargo.toml
src-tauri/yaak-http/src/: tls.rs
src-tauri/yaak-ws/: Cargo.toml
src-tauri/yaak-ws/src/: connect.rs
